compiler_errors/examples/keyword_typo_2.f90
program hello
    print *, "Hello, World!"
edn program hello
